# muscript

./: .gitignore  IMPLEMENTATION_PLAN.md  MULTI_LEVEL_SCOPING_STATUS.md  Makefile  README.md  TIMING_AND_STATE_SUMMARY.md  debug_ast_inspect.py  debug_drum_timing_inspect.py  debug_repeat.py  debug_voice_parsing.py  debug_voices.py  debug_voices_issue.py  pyproject.toml  test_between_voices.mus  test_composition_level.mus  test_drum_timing.mus  test_grammar.mus  test_inst_level.mus  test_multi_level.mus  test_precedence.mus  test_simple.mus  test_voices_simple.mus
docs/: PHASE_9_SUMMARY.md  articulation_guide.md  ornaments_guide.md  percussion_guide.md  rhythm_guide.md  syntax_reference.md
examples/: articulation_showcase.mus  basic_melody.mus  chords_vs_single_notes.mus  drum_beat.mus  drum_beat.mus.m4  dynamics_demo.mus  lofi_beat.mus  lofi_beat.mus.m4  lofi_chill.mus  lofi_chill.mus.m4  lofi_nightwalk.mus  lofi_nightwalk.mus.m4  orchestral.mus  ornaments_demo.mus  piano_voices.mus  repeat_demo.mus  repeat_demo.mus.m4  rhythm_complex.mus  smooth_jazz.mus  smooth_jazz.mus.m4
muslang/: __init__.py  articulations.py  ast_nodes.py  cli.py  config.py  drums.py  grammar.lark  midi_gen.py  parser.py  semantics.py  theory.py
tests/: __init__.py  test_articulations.py  test_drums.py  test_integration_semantic.py  test_midi_generation.py  test_parser_phase4.py  test_semantics.py  test_slide.py  test_stack_reset.py  test_theory.py  test_timing_and_state.py  test_voices.py
