[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[project]
name = "muslang"
version = "0.1.0"
description = "A music composition DSL with extensive articulation support"
requires-python = ">=3.10"
dependencies = [
    "lark>=1.1.0",
    "midiutil>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mido>=1.3.0",  # For MIDI analysis in tests
]

[project.scripts]
muslang = "muslang.cli:main"
